cli/src/tui/view/snapshots/snapshot_disk_detail.snap
---
source: cli/src/tui/view/mod.rs
expression: buffer_to_string(&terminal)
---
Data  Sharing
 Pool ──────────────────────────────────────────────────────
 Path ┌ Disk Detail ─────────────────────────────────┐
 Redun│ Disk       toshiba                           │
 Usage│ Status     unlocked                          │
 █████│ Cipher     aes-xts-plain64                   │
      │ Key size   512 bits                          │
 Disks│ Keyslots   1 of 32 slots used                │──────
     N│                                              │
 ▶ 1 t│ Allocations                                  │
   2 i│ Type       Profile       Size                │
   3 w│ Data       RAID1      1.3 TiB                │
      │ Metadata   DUP        1.5 GiB                │
 Scrub│ System     DUP         16 MiB                │──────
 Last │ Unallocated           4.1 TiB                │
 Error│                                              │
 Total│ Esc to go back                               │
 Rate └──────────────────────────────────────────────┘
 Duration     0:00:00
Quit: q │ Help: ? │ Reload: r
