cli/src/tui/view/snapshots/snapshot_disk_detail_null_underlying.snap
---
source: cli/src/tui/view/mod.rs
expression: buffer_to_string(&terminal)
---
Data  Scrub  Browse
 Pool ──────────────────────────────────────────────────────
 Path ┌ Disk Detail ─────────────────────────────────┐
 Usage│ Disk       toshiba                           │
      │ Status     unlocked                          │
 Type │ underlying device gone                       │
 Data │ Cipher     aes-xts-plain64                   │
 Metad│ Key size   512 bits                          │
 Syste│ Keyslots   1 of 32 slots used                │
      │                                              │
 Disks│ Allocations ──────────────────────────────── │──────
     N│ Type        Profile     Size                 │
 ▶ 1 t│ Data        RAID1       1.3 TiB              │iB
   2 i│ Metadata    DUP         1.5 GiB              │iB
   3 w│ System      DUP         16.0 MiB             │iB
      │ Unallocated             4.1 TiB              │
      │                                              │
      │ btrfs Device Errors ──────────────────────── │
      │ read            0                            │
      │ write           0                            │
      │ flush           0                            │
      │ corruption      0                            │
      │ generation      0                            │
      │                                              │
      │ r reload · Esc to go back                    │
      └──────────────────────────────────────────────┘
Quit: q │ Help: ? │ Reset temp hi/lo: R │ Reload: r
