cli/src/tui/view/snapshots/snapshot_disk_detail_nvme.snap
---
source: cli/src/tui/view/mod.rs
assertion_line: 1839
expression: buffer_to_string(&terminal)
---
Data  Scrub  Browse
 Pool ┌ Disk Detail ─────────────────────────────────┐──────
 Path │ Disk       samsung                           │
 Profi│ Status     unlocked                          │
 Usage│ Cipher     aes-xts-plain64                   │
      │ Key size   512 bits                          │
 Type │ Keyslots   1 of 32 slots used                │
 Data │                                              │
 Metad│ Allocations ──────────────────────────────── │
 Syste│ Type        Profile     Size                 │
      │ Data        RAID1       768.0 GiB            │
 Disks│ Metadata    DUP         1.0 GiB              │──────
     N│ System      DUP         16.0 MiB             │
   1 t│ Unallocated             1.1 TiB              │iB
   2 i│                                              │iB
   3 w│ btrfs Device Errors ──────────────────────── │iB
 ▶ 4 s│ read            0                            │iB
      │ write           0                            │
      │ flush           0                            │
      │ corruption      0                            │
      │ generation      0                            │
      │                                              │
      │ SMART ────────────────────────────────────── │
      │ health           warning                     │
      │ critical warning 0                           │
      │ media errors     0                           │
      │ available spare  100                         │
      │ percentage used  92                          │
      │                                              │
      │ r reload · q/Esc to go back                  │
      └──────────────────────────────────────────────┘
Quit: q │ Help: ? │ Reset temp hi/lo: R │ Reload: r
