cli/src/tui/view/snapshots/snapshot_error.snap
---
source: cli/src/tui/view/mod.rs
expression: buffer_to_string(&terminal)
---
Data  Sharing
 Pool ──────────────────────────────────────────────────────
 error: command failed: findmnt exited 1
 Disks ─────────────────────────────────────────────────────
     Name     SMART Power Usage
 ▶ 1 toshiba        —
   2 ironwolf       —
   3 wdc            —
Quit: q │ Help: ? │ Reload: r
